Bump project java version from 17 to 21